--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       retries: 10
     networks:
       - n8n-network
-      - shark
+      #- shark
 
   n8n:
     build:
@@ -77,7 +77,7 @@ services:
         condition: service_healthy
     networks:
       - n8n-network
-      - shark
+      #- shark
     healthcheck:
       test: ['CMD', 'node', '-v']
       interval: 5s
@@ -123,7 +123,7 @@ services:
         condition: service_healthy
     networks:
       - n8n-network
-      - shark
+      #- shark
 
   n8n-worker:
     build:
@@ -167,7 +167,7 @@ services:
         condition: service_healthy
     networks:
       - n8n-network
-      - shark
+      #- shark
     healthcheck:
       test: ['CMD', 'node','-v']
       interval: 5s
@@ -242,5 +242,5 @@ volumes:
 networks:
   n8n-network:
     driver: bridge
-  shark:
-    external: true
+ # shark:
+  #  external: true
