--- a/.env.example
+++ b/.env.example
@@ -15,14 +15,14 @@ COOLDOWN_PERIOD_SECONDS=10
 POSTGRES_HOST=postgres
 POSTGRES_DB=n8n
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=8H|S3y9|f35v # Change this to a strong password
+POSTGRES_PASSWORD=^4n|j233oWbkx # Change this to a strong password
 PGDATA=/var/lib/postgresql/data/pgdata
 N8N_DIAGNOSTICS_ENABLED=false
 N8N_USER_FOLDER=/n8n/main
 N8N_PORT=5678
 N8N_SECURE_COOKIE=false
 N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=false
-N8N_ENCRYPTION_KEY=&BSg£5dE2LQqqAZ(%4_!~Nby4D}0w4h{ # 32 characters MAKE YOUR OWN KEY
+N8N_ENCRYPTION_KEY=~j8%9tD64NiWd9y}*£mW3Q+YzI@1xtVv # 32 characters MAKE YOUR OWN KEY
 EXECUTIONS_MODE=queue
 QUEUE_BULL_REDIS_HOST=redis
 QUEUE_HEALTH_CHECK_ACTIVE=true
@@ -31,7 +31,7 @@ OFFLOAD_MANUAL_EXECUTIONS_TO_WORKERS=true
 N8N_TASK_BROKER_URL=http://n8n:5679
 N8N_COMMAND_RESPONSE_URL=http://n8n:5679
 N8N_TASK_BROKER_PORT=5679
-N8N_RUNNERS_AUTH_TOKEN=KMmdRkrM1Sd3GqDHEa3TOtOUmqVWMm # Change this to a strong password
+N8N_RUNNERS_AUTH_TOKEN=F8b}3:1uGL£6=Lsd # Change this to a strong password
 POLL_INTERVAL_SECONDS=5
 NODE_FUNCTION_ALLOW_EXTERNAL=ajv,ajv-formats,puppeteer
 PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
@@ -39,7 +39,7 @@ PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
 DATA_FOLDER=/root/n8n-autoscaling
 
 # The top level domain to serve from, this should be the same as the subdomain you created above
-DOMAIN_NAME=growthportsolutions.com
+DOMAIN_NAME=onlyaitool.com
 
 # The subdomain to serve from
 SUBDOMAIN=n8n
@@ -52,4 +52,4 @@ SUBDOMAIN=n8n
 GENERIC_TIMEZONE=Asia/Kuala_Lumpur
 
 # The email address to use for the SSL certificate creation
-SSL_EMAIL=angelo.cordero@growthportsolutions.com
+SSL_EMAIL=hello@goacademyai.com
