--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,7 @@ services:
       - N8N_HOST=${SUBDOMAIN}.${DOMAIN_NAME}
       - N8N_DIAGNOSTICS_ENABLED=${N8N_DIAGNOSTICS_ENABLED}
       - N8N_USER_FOLDER=${N8N_USER_FOLDER}
+      - N8N_CUSTOM_EXTENSIONS=${N8N_USER_FOLDER}
       - N8N_PORT=${N8N_PORT}
       - N8N_PROTOCOL=https
       - NODE_ENV=production
