--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,6 +115,7 @@ services:
     environment:
       - N8N_DIAGNOSTICS_ENABLED=${N8N_DIAGNOSTICS_ENABLED}
       - N8N_USER_FOLDER=${N8N_USER_FOLDER}
+      - N8N_CUSTOM_EXTENSIONS=${N8N_USER_FOLDER}
       - N8N_ENCRYPTION_KEY=${N8N_ENCRYPTION_KEY}  # You need to create your own encryption key
       - N8N_PORT=${N8N_PORT}
       # Queue mode config
@@ -156,6 +157,7 @@ services:
     environment:
       - N8N_DIAGNOSTICS_ENABLED=${N8N_DIAGNOSTICS_ENABLED}
       - N8N_USER_FOLDER=${N8N_USER_FOLDER} # Consider parameterizing this if scaling multiple unique workers
+      - N8N_CUSTOM_EXTENSIONS=${N8N_USER_FOLDER}
       - N8N_ENCRYPTION_KEY=${N8N_ENCRYPTION_KEY}  # You need to create your own encryption key
       - OFFLOAD_MANUAL_EXECUTIONS_TO_WORKERS=true
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=false
