--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 ## Autoscaling
 COMPOSE_PROJECT_NAME=n8n-autoscaling
 COMPOSE_FILE_PATH=/app/docker-compose.yml
-GENERIC_TIMEZONE=America/New_York
+GENERIC_TIMEZONE=Asia/Kuala_Lumpur
 MIN_REPLICAS=1
-MAX_REPLICAS=5
+MAX_REPLICAS=3
 SCALE_UP_QUEUE_THRESHOLD=5
 SCALE_DOWN_QUEUE_THRESHOLD=1
 POLLING_INTERVAL_SECONDS=10
@@ -25,37 +25,30 @@ QUEUE_HEALTH_CHECK_ACTIVE=true
 POSTGRES_HOST=postgres
 POSTGRES_DB=n8n
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=YOURPASSWORD # Change this to a strong password
+POSTGRES_PASSWORD=^4n|j233oWbkx # Change this to a strong password
 PGDATA=/var/lib/postgresql/data/pgdata
 DB_TYPE=postgresdb
 
 ## N8N
-N8N_HOST=n8n.domain.com # Change this
-N8N_WEBHOOK=webhook.domain.com # Change this
-N8N_WEBHOOK_URL=https://webhook.domain.com # Change this
-WEBHOOK_URL=https://webhook.domain.com # Change this
-N8N_EDITOR_BASE_URL=https://n8n.domain.com # Change this
+N8N_HOST=n8n.onlyaitool.com # Change this
+N8N_WEBHOOK=webhook.onlyaitool.com # Change this
+N8N_WEBHOOK_URL=https://webhook.onlyaitool.com # Change this
+WEBHOOK_URL=https://webhook.onlyaitool.com # Change this
+N8N_EDITOR_BASE_URL=https://n8n.onlyaitool.com # Change this
 N8N_PROTOCOL=https
 N8N_PORT=5678
 N8N_DIAGNOSTICS_ENABLED=false
 N8N_USER_FOLDER=/n8n/main
 N8N_SECURE_COOKIE=false
 N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=false
-N8N_ENCRYPTION_KEY=YOURKEY # 32 characters MAKE YOUR OWN KEY
-N8N_USER_MANAGEMENT_JWT_SECRET=YOURKEY # Change this to a strong password
+N8N_ENCRYPTION_KEY=j8%9tD64NiWd9y}*£mW3Q+YzI@1xtVv # 32 characters MAKE YOUR OWN KEY
+N8N_USER_MANAGEMENT_JWT_SECRET=F8b}3:1uGL£6=Lsd # Change this to a strong password
 N8N_WORKER_SERVICE_NAME=n8n-worker
 EXECUTIONS_MODE=queue
 OFFLOAD_MANUAL_EXECUTIONS_TO_WORKERS=true
 N8N_TASK_BROKER_URL=http://n8n:5679
 N8N_COMMAND_RESPONSE_URL=http://n8n:5679
 N8N_TASK_BROKER_PORT=5679
-N8N_RUNNERS_AUTH_TOKEN=YOURPASSWORD # Change this to a strong password
+N8N_RUNNERS_AUTH_TOKEN=F8b}3:1uGL£6=Lsd # Change this to a strong password
 NODE_FUNCTION_ALLOW_EXTERNAL=ajv,ajv-formats,puppeteer,ffmpeg,git,graphicsmagick,openssh-client
 PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
-
-## Cloudflare Tunnel
-CLOUDFLARE_TUNNEL_TOKEN=YOURTOKEN
-
-## Tailscale
-TAILSCALE_IP= 
-# Change this to your Tailscale IP OPTIONAL BUT RECOMMENDED
