--- a/.env.example
+++ b/.env.example
@@ -25,30 +25,30 @@ QUEUE_HEALTH_CHECK_ACTIVE=true
 POSTGRES_HOST=postgres
 POSTGRES_DB=n8n
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=^4n|j233oWbkx # Change this to a strong password
+POSTGRES_PASSWORD=8H|S3y9|f35v # Change this to a strong password
 PGDATA=/var/lib/postgresql/data/pgdata
 DB_TYPE=postgresdb
 
 ## N8N
 N8N_HOST=n8n.onlyaitool.com # Change this
-N8N_WEBHOOK=webhook.onlyaitool.com # Change this
-N8N_WEBHOOK_URL=https://webhook.onlyaitool.com # Change this
-WEBHOOK_URL=https://webhook.onlyaitool.com # Change this
-N8N_EDITOR_BASE_URL=https://n8n.onlyaitool.com # Change this
+N8N_WEBHOOK=webhook.growthportsolutions.com # Change this
+N8N_WEBHOOK_URL=https://webhook.growthportsolutions.com # Change this
+WEBHOOK_URL=https://webhook.growthportsolutions.com # Change this
+N8N_EDITOR_BASE_URL=https://n8n.growthportsolutions.com # Change this
 N8N_PROTOCOL=https
 N8N_PORT=5678
 N8N_DIAGNOSTICS_ENABLED=false
 N8N_USER_FOLDER=/n8n/main
 N8N_SECURE_COOKIE=false
 N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=false
-N8N_ENCRYPTION_KEY=j8%9tD64NiWd9y}*£mW3Q+YzI@1xtVv # 32 characters MAKE YOUR OWN KEY
-N8N_USER_MANAGEMENT_JWT_SECRET=F8b}3:1uGL£6=Lsd # Change this to a strong password
+N8N_ENCRYPTION_KEY=&BSg£5dE2LQqqAZ(%4_!~Nby4D}0w4h{ # 32 characters MAKE YOUR OWN KEY
+N8N_USER_MANAGEMENT_JWT_SECRET=KMmdRkrM1Sd3GqDHEa3TOtOUmqVWMm  # Change this to a strong password
 N8N_WORKER_SERVICE_NAME=n8n-worker
 EXECUTIONS_MODE=queue
 OFFLOAD_MANUAL_EXECUTIONS_TO_WORKERS=true
 N8N_TASK_BROKER_URL=http://n8n:5679
 N8N_COMMAND_RESPONSE_URL=http://n8n:5679
 N8N_TASK_BROKER_PORT=5679
-N8N_RUNNERS_AUTH_TOKEN=F8b}3:1uGL£6=Lsd # Change this to a strong password
+N8N_RUNNERS_AUTH_TOKEN=KMmdRkrM1Sd3GqDHEa3TOtOUmqVWMm # Change this to a strong password
 NODE_FUNCTION_ALLOW_EXTERNAL=ajv,ajv-formats,puppeteer,ffmpeg,git,graphicsmagick,openssh-client
 PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
