--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,4 @@ N8N_TASK_BROKER_PORT=5679
 N8N_RUNNERS_AUTH_TOKEN=KMmdRkrM1Sd3GqDHEa3TOtOUmqVWMm # Change this to a strong password
 NODE_FUNCTION_ALLOW_EXTERNAL=ajv,ajv-formats,puppeteer,ffmpeg,git,graphicsmagick,openssh-client
 PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
+DATA_FOLDER=/root/n8n-autoscaling
