--- a/.env.example
+++ b/.env.example
@@ -30,10 +30,10 @@ PGDATA=/var/lib/postgresql/data/pgdata
 DB_TYPE=postgresdb
 
 ## N8N
-N8N_HOST=n8n.onlyaitool.com # Change this
-N8N_WEBHOOK=webhook.growthportsolutions.com # Change this
-N8N_WEBHOOK_URL=https://webhook.growthportsolutions.com # Change this
-WEBHOOK_URL=https://webhook.growthportsolutions.com # Change this
+N8N_HOST=n8n.growthportsolutions.com # Change this
+N8N_WEBHOOK=n8n.growthportsolutions.com # Change this
+N8N_WEBHOOK_URL=https://n8n.growthportsolutions.com # Change this
+WEBHOOK_URL=https://n8n.growthportsolutions.com # Change this
 N8N_EDITOR_BASE_URL=https://n8n.growthportsolutions.com # Change this
 N8N_PROTOCOL=https
 N8N_PORT=5678
