--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 volumes:
   postgres_data:
   redis_data:
+  evolution_redis_data:
+  evolution_postgres_data:
+  evolution_instances:
   n8n_main:
   n8n_webhook:
   caddy_data:
@@ -220,3 +223,48 @@ services:
         condition: service_started # or service_healthy if you have a healthcheck that passes with 0 initial replicas
     networks:
       - n8n-network
+
+  evolution_redis:
+    image: redis:7-alpine
+    networks:
+      - n8n-network
+    container_name: evolution_redis
+    command: >
+      redis-server --port 6379 --appendonly yes
+    volumes:
+      - evolution_redis_data:/data
+    ports:
+      - 6380:6379
+
+  evolution_postgres:
+    container_name: evolution_postgres
+    image: postgres:15
+    networks:
+      - n8n-network
+    command: ["postgres", "-c", "max_connections=1000", "-c", "listen_addresses=*"]
+    restart: always
+    ports:
+      - "5433:5432"
+    environment:
+      - POSTGRES_USER=evolution_user
+      - POSTGRES_PASSWORD=evolution_pass
+      - POSTGRES_DB=evolution
+      - POSTGRES_HOST_AUTH_METHOD=trust
+    volumes:
+      - evolution_postgres_data:/var/lib/postgresql/data
+      
+  evolution_api:
+    container_name: evolution_api
+    image: evoapicloud/evolution-api:latest
+    restart: always
+    depends_on:
+      - evolution_redis
+      - evolution_postgres
+    ports:
+      - "8080:8080"
+    volumes:
+      - evolution_instances:/evolution/instances
+    networks:
+      - n8n-network
+    env_file:
+      - .env
