--- a/.env.example
+++ b/.env.example
@@ -86,7 +86,7 @@ DEL_INSTANCE=false
 
 # Provider: postgresql | mysql
 DATABASE_PROVIDER=postgresql
-DATABASE_CONNECTION_URI='postgres://evolution_user:evolution_pass@evolution_postgres:5432/evolution?schema=public'
+DATABASE_CONNECTION_URI='postgres://evolution_user:evolution_pass@evolution_postgres:5432/evolution'
 # Client name for the database connection
 # It is used to separate an API installation from another that uses the same database.
 DATABASE_CONNECTION_CLIENT_NAME=evolution_exchange
